<?xml version="1.0"?>
<package format="3">
  <name>c1_cam_usb_sync</name>
  <version>0.0.0</version>
  <description>The c1 camera with usb conv. kit time sync package</description>
  <maintainer email="tsukasa@todo.todo">root</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>v4l2_camera</exec_depend>
  <exec_depend>sensor_trigger</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
